# hoil_interp

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: github-action.yaml
hoil_scripts/: conditional.il  decl.il  loop.il
src/: AST.h  CMakeLists.txt  analyser.cpp  analyser.h  codegen.cpp  codegen.h  compiler.cpp  compiler.h  lexemes.h  lexer.cpp  lexer.h  lexer_components.h  lexicons.h  main  main.cpp  parser.cpp  parser.h  scanner.cpp  scanner.h  symbol_table.h  tokens.h
src/ast/: ast.h  identifier.h  program.h  terminal.h  visitor.h
src/ast/decl/: array_decl.h  decl.h  func_decl.h  param.h  var_decl.h
src/ast/expr/: array_expr.h  (+16 more)
src/lexer_component/: alphabet_component.h  lexer_component.h  misc_component.h  number_component.h  operator_component.h  string_component.h
src/lexicon/: add.h  div.h  int.h  integer.h  lexicon.h  mul.h  real.h  sub.h  subtract.h
test/: CMakeLists.txt  test0.tl  test1.tl
test/analyser/: CMakeLists.txt  test0.tl  test1.tl  test2.tl  test3.tl  test4.tl  test5.tl
test/lexer/: CMakeLists.txt  test0.tl  test1.tl  test2.tl  test3.tl  test4.tl  test6.tl  test7.tl
test/parser/: CMakeLists.txt  test0.tl  test1.tl  test10.tl  test11.tl  test12.tl  test13.tl  test14.tl  test15.tl  test16.tl  test17.tl  test18.tl  test19.tl  test2.tl  test20.tl  test21.tl  test22.tl  test23.tl  test24.tl  test25.tl  test26.tl  test27.tl  test28.tl  test29.tl  test3.tl  test30.tl  test31.tl  test32.tl  test33.tl  test34.tl  test35.tl  test36.tl  test37.tl  test38.tl  test39.tl  test4.tl  test40.tl  test41.tl  test42.tl  test43.tl  (+8 more)
(+129 files in other folders)
